Removed database.yml from source control

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@
 
 #Ignoring other unnecessary files
 *.swp
+
+# Ignore database.yml as it's unique for each developer machine
+/config/database.yml
